--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
+    "lint": "npx eslint .",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +25,12 @@
     "konva": "^10.0.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^9.39.1",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0",
     "vite": "^7.1.12"
   },
   "type": "commonjs"
